Fixed things so they work with olccs-rails. This also fixes issues #9 and #15, as well as issue #8, or so I hope.